Thu Jul  5 21:22:32 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a possible crash in silc_server_remove_clients_by_server
	  in silcd/server.c.  Fixed there also some memory leaks.

	* Fixed the silc_idlist_replace_client_id.  It could replace
	  wrong key in the hash table.  Affected file silcd/idlist.c.

	* Do not check whether there are global users on the channel
	  if the channel->global_users is FALSE.  Affected functions
	  silc_server_remove_from_one_channel and
	  silc_server_remove_from_channels in silcd/server.c.  Also,
	  do not check if the removed client is local as we can be
	  sure that global client was not removed from the channel
	  and checking for global users is not needed.

	* The silc_server_remove_clients_by_server now re-generates
	  the channel keys correctly for those channels that had
	  clients removed from them.  Affected file silcd/server.c.

Tue Jul  3 11:39:20 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Found the reason of random crashes in the server.  We weren't
	  ignoring the SIGPIPE signal (which can be sent in write())
	  and it crashed the server.  Affected file silcd/silcd.c.

Fri Jun 29 20:05:25 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Assure that sock->user_data is not NULL in the function
	  silc_server_packet_send in silcd/packet_send.c.

	* Disconnect the remote connection if it could not be added
	  to any ID lists in the server.  The affected file is
	  silcd/server.c.

	* Check in silc_server_packet_send[_real/dest] that the
	  socket is not disconnecting and ignore the data if it is.
	  Affected file silcd/packet_send.c.

	* Define inline to __inline on native WIN32 compilation.
	  Affected file includes/silcwin32.h.

	* Added some explicit type casts for inline code since MSVC
	  require them.  Affected files lib/silcutil/silcbuffer.h,
	  lib/trq/silcdlist.h and lib/trq/silclist.h.

	* Print warning in log files from now on if the packet